<resources>
    <string name="app_name">MovieRadar</string>
    <string name="Genre_1">Genre</string>
    <string name="Genre_2">Genre</string>
    <string name="Genre_3">Genre</string>
    <string name="search_hint">Search</string>
    <string name="movieradar">MovieRadar</string>
    <string name="home">Home</string>
    <string name="catalogus">Catalogus</string>
    <string name="person">Persoonlijk</string>
    <string name="popular_movie">Populaire Movie</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="detailpagina_button_buy_tickets">Koop ticket(s)</string>
    <string name="detailpagina_genre">Genre:</string>
    <string name="detailpagina_rating">Rating:</string>
    <string name="detailpagina_status">Status:</string>
    <string name="detailpagina_time">Tijd:</string>
    <string name="detailpagina_budget">Budget:</string>
    <string name="detailpagina_revenue">Revenue:</string>
    <string name="detail_title">Detailpagina</string>
    <string name="add_movie_to_list_title">Voeg toe aan lijsten:</string>
    <string name="label_count_chairs">Hoeveelheid stoelen:</string>
    <string name="standard_count_chairs">0</string>
    <string name="label_kind_ticket">Soort ticket:</string>
    <string name="label_total_price">Totale prijs:</string>
    <string name="standard_total_price">€0,00</string>
    <string name="cancel_button">Annuleer tickets</string>
    <string name="order_button">Bestel tickets</string>

<!--    Ticket kopen-->
    <string name="payment_screen">Tickets kopen</string>
    <string name="Payment_choice">Kies betaal optie:</string>
<!--    Paypal-->
    <string name="Paypal_choice">Paypal</string>
    <string name="Email">Emailadres</string>
    <string name="Wachtwoord">Wachtwoord</string>
<!--    Ideal-->
    <string name="Ideal_choice">Ideal</string>
    <string name="Spinneritems">Kies je bank:</string>
    <string-array name="Banken">
        <item></item>
        <item>ABN AMRO</item>
        <item>Rabobank</item>
        <item>Knab</item>
        <item>ASN Bank</item>
        <item>ING</item>
        <item>SNS Bank</item>
    </string-array>
<!--    Creditkaart-->
    <string name="Creditcard_choice">Credit kaart</string>
    <string name="Cardholder">Kaarthouder naam</string>
    <string name="Creditkaartnummer">XXXX-XXXX-XXXX-XXXX</string>
    <string name="Expiry">Vervaldatum</string>
    <string name="ExpiryPNG">This is a picture of a calender</string>
    <string name="Security">Veilgheidscode</string>
<!--    Applepay-->
    <string name="ApplePay_choice">Apple Pay</string>
    <string name="Username">Gebruikersnaam</string>
    <string name="WachtwoordApple">Wachtwoord</string>

<!--Betaling voltooien/annuleren-->
    <string name="Betaling_voltooien">Betaling voltooien</string>
    <string name="Betaling_annuleren">Betaling annuleren</string>

    <string-array name="kindOfTicket_array">
        <item>Volwassenen (13+)</item>
        <item>Kinderen (t/m 12)</item>
    </string-array>



    <string name="roomLabel">Zaal:</string>
    <string name="seatLabel">Stoel:</string>
    <string name="rowLabel">Rij:</string>
    <string name="favoButton">Favorieten</string>
    <string name="ticketLabel">Ticket(s)</string>
    <string name="labelTotale_prijs">Totale prijs:</string>
    <string name="label_movieTitel">Titel van film:</string>
    <string name="label_kindOfTickets">Soort ticket(s):</string>
    <string name="ticket_detail_title">Ticket Detail</string>
    <string name="favorieten_title">Favorieten Lijst</string>
</resources>