<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Paypal_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26F461"
        android:gravity="center"
        android:text="@string/Creditcard_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreditcardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Paypal_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:hint="@string/Creditkaartnummer"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:textColorHint="#546E7A" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreditCardholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreditcardNum"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:hint="@string/Cardholder"
        android:minHeight="48dp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:textColorHint="#546E7A" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreditcardSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreditCardholder"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:hint="@string/Security"
        android:maxLength="4"
        android:minHeight="48dp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:textColorHint="#546E7A" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreditcardExpire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreditcardSecurity"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:hint="@string/Expiry"
        android:minHeight="48dp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/BetalenAnnuleren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreditcardExpire"
        android:layout_gravity="center"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/darkgray"
        android:text="@string/Betaling_annuleren" />

    <Button
        android:id="@+id/BetalenviaPaypal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BetalenAnnuleren"
        android:layout_gravity="center"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/orange"
        android:text="@string/Betaling_voltooien"
        android:textColor="@color/black" />

</RelativeLayout>