<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Tb_Ticketkopen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15sp"
        android:background="@color/orange"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/payment_screen"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ly_ticketInformation"
        android:layout_below="@id/Ticketkopen"
        android:background="@drawable/border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">

            <TextView
                android:text="@string/label_movieTitel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_MovieTitle"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">

            <TextView
                android:text="@string/label_kindOfTickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_KindOfTicket"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_totalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_ticketInformation"
        android:background="@drawable/border_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:text="@string/labelTotale_prijs"
            />

        <TextView
            android:id="@+id/tv_totalPrice"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/Betaaloptie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_totalPrice"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Payment_choice"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Paypal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Betaaloptie"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:backgroundTint="@color/orange"
        android:text="@string/Paypal_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <Button
        android:id="@+id/ApplePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Paypal"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:backgroundTint="@color/orange"
        android:text="@string/ApplePay_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <Button
        android:id="@+id/CreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ApplePay"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:backgroundTint="@color/orange"
        android:text="@string/Creditcard_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <Button
        android:id="@+id/Ideal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreditCard"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:backgroundTint="@color/orange"
        android:text="@string/Ideal_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

</RelativeLayout>