<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Ideal_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FB4AFB"
        android:gravity="center"
        android:text="@string/Ideal_choice"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <Spinner
        android:id="@+id/DropdownIdeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ideal_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="add"
        android:entries="@array/Banken"
        android:paddingLeft="40sp"
        android:paddingTop="30sp"
        android:paddingRight="40sp"
        android:paddingBottom="30sp" />

    <Button
        android:id="@+id/BetalenAnnuleren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DropdownIdeal"
        android:layout_gravity="center"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/darkgray"
        android:text="@string/Betaling_annuleren" />

    <Button
        android:id="@+id/BetalingvoltooienI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BetalenAnnuleren"
        android:layout_gravity="center"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/orange"
        android:text="@string/Betaling_voltooien"
        android:textColor="@color/black" />

</RelativeLayout>